--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <!-- Hidden Verint survey field -->
-        <input type="hidden" id="Q4_1">
+        <input type="hidden" id="i3_i1">
     </div>
 
     <script>
