--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             ✅ <b>Upload Successful!</b><br>
             Your file has been uploaded.  
             <p><b>File Link:</b> <input type="text" id="fileLink" readonly onclick="copyToClipboard()"></p>
-            <p><b>Copy the link above</b> and paste it in the survey field below.</p>
+            <p><b>Copy the above link and paste it in the GRID GURUS GRAND FINALE MS Teams chat group.</b></p>
         </div>
     </div>
 
