--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             let copyText = document.getElementById("fileLink");
             copyText.select();
             document.execCommand("copy");
-            alert("File link copied! Paste it in the survey field.");
+            alert("File link copied! Paste it in the GRID GURUS GRAND FINALE MS Teams chat group.");
         }
     </script>
 
