--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             ✅ <b>Upload Successful!</b><br>
             Your file has been uploaded.  
             <p><b>File Link:</b> <input type="text" id="fileLink" readonly onclick="copyToClipboard()"></p>
-            <p><b>Copy the above link and paste it in the GRID GURUS GRAND FINALE MS Teams chat group.</b></p>
+            <p><b>Copy the above link and paste it in the survey field below.</b></p>
         </div>
     </div>
 
@@ -81,7 +81,7 @@
             let copyText = document.getElementById("fileLink");
             copyText.select();
             document.execCommand("copy");
-            alert("File link copied! Paste it in the GRID GURUS GRAND FINALE MS Teams chat group.");
+            alert("File link copied! Paste it in the the survey field below.");
         }
     </script>
 
